--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
             "@radix-ui/react-select": "^2.1.6",
             "@radix-ui/react-separator": "^1.1.2",
             "@radix-ui/react-slider": "^1.2.3",
-            "@radix-ui/react-slot": "^1.1.2",
+            "@radix-ui/react-slot": "^1.2.3",
             "@radix-ui/react-switch": "^1.1.3",
             "@radix-ui/react-tabs": "^1.1.3",
             "@radix-ui/react-toggle": "^1.1.2",
@@ -52,10 +52,13 @@
       "devDependencies": {
             "@types/node": "^20.10.0",
             "@vitejs/plugin-react-swc": "^3.10.2",
+            "gh-pages": "^6.3.0",
             "vite": "6.3.5"
       },
       "scripts": {
             "dev": "vite",
-            "build": "vite build"
+            "predeploy": "npm run build",
+            "deploy": "gh-pages -d dist",
+            "build": "vite build --base=/duobassrecords/"
       }
 }
