--- a/package.json
+++ b/package.json
@@ -56,9 +56,8 @@
             "vite": "6.3.5"
       },
       "scripts": {
-            "dev": "vite",
-            "predeploy": "npm run build",
-            "deploy": "gh-pages -d dist",
-            "build": "vite build --base=/duobassrecords/"
+      "build": "vite build --base=/",
+      "predeploy": "npm run build",
+      "deploy": "gh-pages -d dist -b master"
       }
 }
