--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-      "name": "DuoBass Records Website",
+      "name": "duobass-records-website",
       "version": "0.1.0",
       "private": true,
       "dependencies": {
@@ -55,9 +55,9 @@
             "gh-pages": "^6.3.0",
             "vite": "6.3.5"
       },
-      "scripts": {
-      "build": "vite build --base=/",
-      "predeploy": "npm run build",
-      "deploy": "gh-pages -d dist -b master"
-      }
+    "scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview"
+}
 }
